assets/stylesheets/main.css
/* ... */
.download-apps img {
    width: 200px;
    margin-top: 20px;
}

.download-apps img:hover {
    cursor: pointer;
}

.swiper-slide-active {
    padding: 0 20px !important;
    /* overflow: visible !important; */
}

.swiper-button-prev {
    /* padding-right: 75px; */
    left: 0px !important;
}

.swiper-button-next {
    right: 0px !important;
}

.swiper-slide {
    display: flex;
}

@media screen and (max-width: 480px) {
    .side-menu {
        position: absolute;
        display: block;
        top: 0;
        left: 0;
        width: 100%;
        bottom: 0;
        z-index: 2;
    }
    .nav-list {
        display: none;
    }
    .side-menu-items {
        display: flex;
        justify-content: center;
        align-items: center;
        position: fixed;
        top: 0;
        bottom: 0;
        left: -60%;
        width: 60%;
        height: 100vh;
        background-color: #000;
        padding: 50px 15px;
        font-size: 20px;
        text-align: center;
        transition: 0.3s;
        border-bottom-right-radius: 50%;
        border-top-right-radius: 50%;
        /* border-radius: 30%; */
    }
    .side-menu-items ul li {
        margin: 40px 0;
    }
    .side-menu li a {
        color: #fff;
    }
    .side-menu-button {
        /* display: flex; */
        /* justify-content: flex-end; */
        width: 30px;
        height: 30px;
        position: absolute;
        left: 10px;
        top: 50%;
        transform: translateY(-50%);
        z-index: 1;
        border: none;
        background-color: transparent;
        cursor: pointer;
    }
    .ham-button {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 2px;
        background-color: #000;
        transition: 0.3s;
    }
    .ham-button::before {
        content: "";
        position: absolute;
        top: 12px;
        left: 0;
        width: 70%;
        height: 2px;
        background-color: #000;
        transition: 0.3s;
    }
    .ham-button::after {
        content: "";
        position: absolute;
        top: 24px;
        left: 0;
        width: 50%;
        height: 2px;
        background-color: #000;
        transition: 0.3s;
    }
    .switch.ham-button {
        position: absolute;
        top: 50%;
        left: 0;
        width: 100%;
        background-color: #fff;
        transform: rotate(225deg);
    }
    .switch.ham-button::before {
        opacity: 0;
    }
    .switch.ham-button::after {
        content: "";
        position: absolute;
        top: 0px;
        left: 0;
        width: 100%;
        transform: rotate(-90deg);
    }
    .side-menu img {
        width: 25px;
    }
    .cart-mobile {
        position: absolute;
        right: 25px;
        top: 25px;
    }
    .logo {
        position: relative;
        z-index: 3;
        margin-left: 20px;
    }
    .logo h1 {
        color: #000;
        transition: 0.3s;
    }
    .show-menu {
        top: 0;
        left: 0;
    }
    .switch.ham-button {
        position: absolute;
        top: 50%;
        left: 0;
        width: 100%;
        background-color: #fff;
        transform: rotate(225deg);
    }
    .switch.ham-button::before {
        opacity: 0;
    }
    .switch.ham-button::after {
        content: "";
        position: absolute;
        top: 0px;
        left: 0;
        width: 100%;
        background-color: #fff;
        transform: rotate(-90deg);
    }
    .switch.logo h1 {
        color: #fff;
    }
    .columns {
        flex-direction: column;
    }
    .footer {
        padding: 20px 0;
        text-align: center;
    }
    /* .home-page .columns {
        flex-direction: column;
    } */
    .home-page {
        padding: 80px 0;
        text-align: center;
    }
    img {
        max-width: 100%;
    }
    .column {
        width: 90%;
        /* padding: 0 20px; */
    }
    .download-apps img {
        margin: 20px auto 0;
    }
    .swiper-slide {
        display: block;
    }
    .swiper-slide-active {
        padding: 0 !important;
        /* overflow: visible !important; */
    }
    .product-title {
        font-size: 26px;
        /* text-align: center; */
    }
    .product-price {
        font-size: 20px;
    }
    .all-products {
        text-align: center;
    }
    .all-products-top {
        flex-direction: column;
        /* justify-content: space-between; */
        /* align-items: flex-end; */
        /* padding: 30px 0 30px 0; */
        padding: 30px 0 20px;
    }
    .forms-container {
        display: flex;
        margin-top: 10px;
        width: 100%;
        justify-content: space-between;
    }
    /* .nav-list {
        position: absolute;
        display: block;
        top: 50px;
        right: 0;
        width: 60%;
        margin-right: 0;
        border: 1px solid red;
    }
    .nav-list li {
        display: block;
    } */
    .cart .columns {
        flex-direction: row;
    }
    .cart {
        margin: 50px 20px 50px;
    }
    .products-details-column {
        flex-grow: 1.3;
    }
    .cart-product-details {
        padding: 0;
    }
    .cart h3 {
        font-size: 1.2rem;
    }
    .cart-products img {
        padding: 10px 0 10px;
        width: 100px;
    }
    .cart p {
        padding-bottom: 0;
    }
    .cart-remove-btn {
        display: block;
        margin-bottom: 10px;
    }
    .cart-subtotal-column {
        flex-grow: 0;
    }
    .cart-subtotal-columns {
        margin-top: 20px;
    }
    .cart-subtotal-columns p {
        padding-bottom: 10px;
        font-weight: 500;
    }
    .cart-quantity-input {
        margin: 0 auto;
    }
    .m-centered {
        text-align: center;
    }
    .products-sort-filter,
    .products-category-filter {
        width: 150px;
        /* height: 20px; */
        padding: 5px;
        /* padding: 5px; */
    }
}

